Minor media query adjustment

--- a/assets/css/modules/_device-notification.sass
+++ b/assets/css/modules/_device-notification.sass
@@ -37,7 +37,7 @@
   @media (max-width: 600px) and (min-width: 480px) and (max-height: 580px)
     display: flex
 
-  @media (min-width: 360px) and (max-width: 767px) and (orientation: landscape)
+  @media (max-width: 736px) and (min-width: 360px) and (orientation: landscape)
     display: flex
 
   @media(max-width: 359px)
