--- a/_pgbackup/assets/css/main_1515758472.css
+++ b/_pgbackup/assets/css/main_1515758472.css
@@ -1781,7 +1781,7 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
-    text-align: left;
+    text-align: center;
     visibility: hidden;
     -webkit-transition: visibility 0s .2s;
     transition: visibility 0s .2s;
@@ -1835,10 +1835,10 @@ body {
     content: "";
     position: absolute;
     top: 50%;
-    left: -15%;
+    left: -25%;
     -webkit-transform: translate(-50%, -25%);
     transform: translate(-50%, -25%);
-    width: 24px;
+    width: 18px;
     height: 20px;
     opacity: 0;
     background-color: #ff5d0f;
