--- a/assets/css/modules/_work.sass
+++ b/assets/css/modules/_work.sass
@@ -18,7 +18,26 @@
 
   &--lockup
     position: relative
+.work1
+  position: relative
+  display: flex
+  width: 960px
+  max-width: 80%
+  height: 100%
+  flex-direction: column
+  justify-content: center
+  margin: 0 auto
 
+  @media (max-width: 1180px)
+    max-width: 100%
+
+  h2
+    margin: 0 0 20px 0
+    font-size: 30px
+    text-align: center
+
+  &--lockup
+    position: relative
     .slider
       position: relative
       display: flex
@@ -55,7 +74,7 @@
           overflow: hidden
 
           img
-            width: 100%
+            width: 60%
 
         &-left
           top: 50%
@@ -80,8 +99,8 @@
             color: $white
 
           .slider--item-title
-            margin-top: 25px
-            font-size: 16px
+            margin-top: 25px;
+            font-size: 40px;
 
           .slider--item-description
             display: block
@@ -113,10 +132,107 @@
     .slider--prev
       left: 0
 
+
+
+
+
+      .slider1
+      position: relative
+      display: flex
+      width: 80%
+      margin: 0 auto
+      padding: 0
+      list-style: none
+
+      &--item
+        position: absolute
+        display: none
+        text-align: center
+
+        a
+          text-decoration: none
+          color: #858585
+
+        &-title
+          margin-top: 10px
+          font-size: 12px
+          font-weight: 700
+          text-transform: uppercase
+
+        &-description
+          display: none
+          max-width: 250px
+          margin: 0 auto
+
+        &-image
+          width: 150px
+          height: 150px
+          margin: 0 auto
+          border-radius: 50%
+          overflow: hidden
+
+          img
+            width: 60%
+
+        &-left
+          top: 50%
+          left: 0
+          transform: translateY(-50%)
+          display: block
+
+        &-right
+          top: 50%
+          right: 0
+          transform: translateY(-50%)
+          display: block
+
+        &-center
+          position: relative
+          top: 30px
+          left: 50%
+          transform: translateX(-50%)
+          display: block
+
+          a
+            color: $white
+
+          .slider1--item-title
+            margin-top: 25px;
+            font-size: 40px;
+
+          .slider1--item-description
+            display: block
+
+          .slider1--item-image
+            width: 300px
+            height: 300px
+
+    .slider1--next,
+    .slider1--prev
+      position: absolute
+      top: 160px
+      display: flex
+      width: 50px
+      height: 50px
+      align-items: center
+      justify-content: center
+      background-color: $muted-gray
+      border-radius: 50%
+      cursor: pointer
+
+      svg
+        width: 20px
+        fill: $white
+
+    .slider1--next
+      right: 0
+
+    .slider1--prev
+      left: 0
+
 @media (max-width: 900px)
 
   .work
-
     &--lockup
 
       .slider
@@ -135,6 +251,25 @@
 
       .slider--next,
       .slider--prev
+        top: 130px
+
+
+        .slider1
+
+        &--item
+
+          &-image
+            width: 120px
+            height: 120px
+
+          &-center
+
+            .slider1--item-image
+              width: 240px
+              height: 240px
+
+      .slider1--next,
+      .slider1--prev
         top: 130px
 
 @media (max-width: 767px)
@@ -162,6 +297,26 @@
       .slider--prev
         top: 105px
 
+
+        .slider1
+        width: 75%
+
+        &--item
+
+          &-image
+            width: 90px
+            height: 90px
+
+          &-center
+
+            .slider1--item-image
+              width: 190px
+              height: 190px
+
+      .slider1--next,
+      .slider1--prev
+        top: 105px
+
 @media (max-width: 600px)
 
   .work
@@ -169,6 +324,16 @@
     &--lockup
 
       .slider
+        width: auto
+
+        &--item
+
+          &-left,
+          &-right
+            display: none
+
+
+      .slider1
         width: auto
 
         &--item
