--- a/assets/css/main5.css
+++ b/assets/css/main5.css
@@ -925,7 +925,7 @@ body {
     }
 }
 
-.work {
+.sports {
     position: relative;
     display: -webkit-box;
     display: -webkit-flex;
@@ -947,22 +947,22 @@ body {
 }
 
 @media (max-width: 1180px){
-    .work {
+    .sports {
         max-width: 100%;
     }
 }
 
-.work h2 {
+.sports h2 {
     margin: 0 0 20px 0;
     font-size: 30px;
     text-align: center;
 }
 
-.work--lockup {
+.sports--lockup {
     position: relative;
 }
 
-.work--lockup .slider {
+.sports--lockup .slider5 {
     position: relative;
     display: -webkit-box;
     display: -webkit-flex;
@@ -974,31 +974,31 @@ body {
     list-style: none;
 }
 
-.work--lockup .slider--item {
+.sports--lockup .slider5--item {
     position: absolute;
     display: none;
     text-align: center;
 }
 
-.work--lockup .slider--item a {
+.sports--lockup .slider5--item a {
     text-decoration: none;
     color: #858585;
 }
 
-.work--lockup .slider--item-title {
+.sports--lockup .slider5--item-title {
     margin-top: 10px;
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
 }
 
-.work--lockup .slider--item-description {
+.sports--lockup .slider5--item-description {
     display: none;
     max-width: 250px;
     margin: 0 auto;
 }
 
-.work--lockup .slider--item-image {
+.sports--lockup .slider5--item-image {
     width: 150px;
     height: 150px;
     margin: 0 auto;
@@ -1006,12 +1006,12 @@ body {
     overflow: hidden;
 }
 
-.work--lockup .slider--item-image img {
+.sports--lockup .slider5--item-image img {
     width: 100%;
     height: 100%;
 }
 
-.work--lockup .slider--item-left {
+.sports--lockup .slider5--item-left {
     top: 50%;
     left: 0;
     -webkit-transform: translateY(-50%);
@@ -1019,7 +1019,7 @@ body {
     display: block;
 }
 
-.work--lockup .slider--item-right {
+.sports--lockup .slider5--item-right {
     top: 50%;
     right: 0;
     -webkit-transform: translateY(-50%);
@@ -1027,7 +1027,7 @@ body {
     display: block;
 }
 
-.work--lockup .slider--item-center {
+.sports--lockup .slider5--item-center {
     position: relative;
     top: 30px;
     left: 50%;
@@ -1036,26 +1036,26 @@ body {
     display: block;
 }
 
-.work--lockup .slider--item-center a {
+.sports--lockup .slider5--item-center a {
     color: #fff;
 }
 
-.work--lockup .slider--item-center .slider--item-title {
+.sports--lockup .slider5--item-center .slider5--item-title {
     margin-top: 25px;
     font-size: 16px;
 }
 
-.work--lockup .slider--item-center .slider--item-description {
+.sports--lockup .slider5--item-center .slider5--item-description {
     display: block;
 }
 
-.work--lockup .slider--item-center .slider--item-image {
+.sports--lockup .slider5--item-center .slider5--item-image {
     width: 300px;
     height: 300px;
 }
 
-.work--lockup .slider--next,
-.work--lockup .slider--prev {
+.sports--lockup .slider5--next,
+.sports--lockup .slider5--prev {
     position: absolute;
     top: 160px;
     display: -webkit-box;
@@ -1077,65 +1077,65 @@ body {
     cursor: pointer;
 }
 
-.work--lockup .slider--next svg,
-.work--lockup .slider--prev svg {
+.sports--lockup .slider5--next svg,
+.sports--lockup .slider5--prev svg {
     width: 20px;
     fill: #fff;
 }
 
-.work--lockup .slider--next {
+.sports--lockup .slider5--next {
     right: 0;
 }
 
-.work--lockup .slider--prev {
+.sports--lockup .slider5--prev {
     left: 0;
 }
 
 @media (max-width: 900px){
-    .work--lockup .slider--item-image {
+    .sports--lockup .slider5--item-image {
         width: 120px;
         height: 120px;
     }
 
-    .work--lockup .slider--item-center .slider--item-image {
+    .sports--lockup .slider5--item-center .slider5--item-image {
         width: 240px;
         height: 240px;
     }
 
-    .work--lockup .slider--next,
-    .work--lockup .slider--prev {
+    .sports--lockup .slider5--next,
+    .sports--lockup .slider5--prev {
         top: 130px;
     }
 }
 
 @media (max-width: 767px){
-    .work--lockup .slider {
+    .sports--lockup .slider5 {
         width: 75%;
     }
 
-    .work--lockup .slider--item-image {
+    .sports--lockup .slider5--item-image {
         width: 90px;
         height: 90px;
     }
 
-    .work--lockup .slider--item-center .slider--item-image {
+    .sports--lockup .slider5--item-center .slider5--item-image {
         width: 190px;
         height: 190px;
     }
 
-    .work--lockup .slider--next,
-    .work--lockup .slider--prev {
+    .sports--lockup .slider5--next,
+    .sports--lockup .slider5--prev {
         top: 105px;
     }
 }
 
 @media (max-width: 600px){
-    .work--lockup .slider {
+    .sports--lockup .slider5 {
         width: auto;
     }
 
-    .work--lockup .slider--item-left,
-    .work--lockup .slider--item-right {
+    .sports--lockup .slider5--item-left,
+    .sports--lockup .slider5--item-right {
         display: none;
     }
 }
@@ -1892,6 +1892,22 @@ body {
 }
 
 .outer-nav li.is-vis:nth-child(5) {
+    -webkit-transition-delay: .16s;
+    transition-delay: .16s;
+}
+.outer-nav li.is-vis:nth-child(6) {
+    -webkit-transition-delay: .16s;
+    transition-delay: .16s;
+}
+.outer-nav li.is-vis:nth-child(7) {
+    -webkit-transition-delay: .16s;
+    transition-delay: .16s;
+}
+.outer-nav li.is-vis:nth-child(8) {
+    -webkit-transition-delay: .16s;
+    transition-delay: .16s;
+}
+.outer-nav li.is-vis:nth-child(9) {
     -webkit-transition-delay: .16s;
     transition-delay: .16s;
 }
