--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -996,6 +996,7 @@ body {
 .work1--lockup .slider1--item-description {
     display: none;
     max-width: 250px;
+    font-size:15px;
     margin: 0 auto;
 }
 
